	new file:   ToolKit/Cpp/AutoRecovery.cpp

+---------+---------+---------+---------+---------+---------+---------+---------+ 
tga.2015/08/21.17_12_49.04.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	new file:   Code/File/TGA(opengl)/TGALoader.cpp
	new file:   Code/File/TGA(opengl)/Tga.h
	new file:   Code/File/TGA(opengl)/ToBmp.cpp
	modified:   Doc/K/T.2015.BugFree.cs
	modified:   History.txt

+---------+---------+---------+---------+---------+---------+---------+---------+ 
tga.2015/08/21.17_15_05.39.K.MzM.T@WS 
On branch master
Your branch is ahead of 'origin/master' by 1 commit.
  (use "git push" to publish your local commits)

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   History.txt

+---------+---------+---------+---------+---------+---------+---------+---------+ 
tga.2015/08/21.17_15_28.12.K.MzM.T@WS 
On branch master
Your branch is ahead of 'origin/master' by 2 commits.
  (use "git push" to publish your local commits)

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   History.txt

+---------+---------+---------+---------+---------+---------+---------+---------+ 
samples.2015/08/25.17_59_18.74.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   Doc/K/T.2015.BugFree.cs
	modified:   History.txt

+---------+---------+---------+---------+---------+---------+---------+---------+ 
k.2015/09/02.17_55_29.11.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   History.txt
	modified:   ZGame/DX10/04/d3dclass.cpp
	modified:   ZGame/DX10/04/d3dclass.h
	modified:   ZGame/DX10/04/modelclass.cpp
	modified:   ZGame/DX10/04/systemclass.cpp
	modified:   ZGame/DX10/04/systemclass.h
