@@ -3524,3 +3524,14 @@ Changes to be committed:
 	modified:   ZGame/DX10/04/systemclass.cpp
 	modified:   ZGame/DX10/04/systemclass.h
 
++---------+---------+---------+---------+---------+---------+---------+---------+ 
+doc.2015-09-04.22_41_02.28.K.MzM.T@WS 
+On branch master
+Your branch is up-to-date with 'origin/master'.
+
+Changes to be committed:
+  (use "git reset HEAD <file>..." to unstage)
+
+	modified:   Doc/K/T.2015.BugFree.cs
+	modified:   History.txt
+
